updated file exercises/3a073271-4a5c-41d1-bb0e-b9494b50cf83/statements/724b971f-db64-462c-b6ef-c613784deefd/q.html

--- a/exercises/3a073271-4a5c-41d1-bb0e-b9494b50cf83/statements/724b971f-db64-462c-b6ef-c613784deefd/q.html
+++ b/exercises/3a073271-4a5c-41d1-bb0e-b9494b50cf83/statements/724b971f-db64-462c-b6ef-c613784deefd/q.html
@@ -1,4 +1,3 @@
-<b>The closest color</b>
-<br>
-<p>Every color can be represented as a sequence of three numbers deonting the intesity of its red, green, and blue component.
-Complete the definition of closest_color so that it returns the name of the color (among those in the provided list) which is visually the closest to the one specified in input as three numbers denoting respectively its red, green, and blue components.</p>
+<b>Text cleaner</b>
+<br><br>
+<p>Complete the definition of text_clean so that it will remove all repeated spaces</p>
